--- a/meteorology/package.json
+++ b/meteorology/package.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/parser": "^8.28.0",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.7.4",
     "lucide-react": "^0.486.0",
     "phosphor-react": "^1.4.1",
     "react": "^19.0.0",
