--- a/meteorology/package.json
+++ b/meteorology/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-i18next": "^7.8.3",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
     "axios": "^1.8.4",
+    "country-flag-icons": "^1.5.19",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.486.0",
     "phosphor-react": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "styled-components": "^6.1.16"
@@ -27,8 +31,11 @@
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@types/d3": "^7.4.3",
+    "@types/i18next": "^12.1.0",
+    "@types/i18next-browser-languagedetector": "^2.0.2",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-world-flags": "^1.6.0",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.23.0",
